--- a/views/head.jade
+++ b/views/head.jade
@@ -1,10 +1,14 @@
 head
   title My Site
   link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-  link(rel='stylesheet', href='css/lumen.css')
+  link(rel='stylesheet', href='/css/lumen.css')
+  script(src="/js/dbhandle.js")
   script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
   script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
 
+  script#dropboxjs(type="text/javascript", src="https://www.dropbox.com/static/api/2/dropins.js", data-app-key="ds8bn744aonco6i")
+
+  
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport",content="width=device-width, initial-scale=1")
@@ -31,7 +35,7 @@ body
                 b.caret
               ul.dropdown-menu
                 li
-                  a(href="/logout") 
+                  a(href="#" onclick="Dropbox.choose({success: onDBSuccess, linkType:'direct', extensions:['.txt', '.text']});") 
                     span.glyphicon.glyphicon-file
                     |  Choose file
                 li
