--- a/views/head.jade
+++ b/views/head.jade
@@ -1,14 +1,26 @@
 head
   title My Site
-  link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-  link(rel='stylesheet', href='/css/lumen.css')
-  script(src="/js/dbhandle.js")
+  
+  // jQuery
   script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
-  script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
 
+  // Bootstrap
+  link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+  script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+  
+  // Lumen Bootstrap Theme
+  link(rel='stylesheet', href='/css/lumen.css')
+
+  // Custom JS & CSS
+  link(rel='stylesheet', href='/css/todotxtpp.css')
+  script(src="/js/dbhandle.js")
+
+  // Dropbox JS for file chooser.
   script#dropboxjs(type="text/javascript", src="https://www.dropbox.com/static/api/2/dropins.js", data-app-key="ds8bn744aonco6i")
 
-  
+  // FontAwesome
+  link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css",rel="stylesheet")
+
   meta(charset="utf-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport",content="width=device-width, initial-scale=1")
