--- a/views/index.jade
+++ b/views/index.jade
@@ -2,10 +2,12 @@ doctype html
 html(lang="en")
   include head
 
-  div.container-fluid
-  div.span1
-    h1 Hey
-    p.lead Hellow lead.
-    p Welcome to my super lame site.
-  include footer
+  if username
+    if path
+      include index-main
+    else
+      include index-no-path
+  else
+    include index-no-user
 
+include footer
