--- a/views/index-main.jade
+++ b/views/index-main.jade
@@ -1,10 +1,6 @@
 
 .container-fluid
   .row-fluid
-    .span4
-    .span8
-
-      h1 Hey
-      p.lead Hellow lead.
-      p Welcome to my super lame site.
-    
+    .col-sm-7
+      p Using path: 
+      = path
