Refactor to separate Dropbox code out.

--- a/views/head.jade
+++ b/views/head.jade
@@ -1,3 +1,5 @@
+doctype html
+html(lang="en")
 head
   title My Site
   
@@ -37,7 +39,7 @@ body
         button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-example-navbar-collapse-1")
           span.sr-only Toggle nav
           span.icon-bar
-        a.navbar-brand(href="#") Todo.txt++
+        a.navbar-brand(href="/home") Todo.txt++
 
       .collapse.navbar-collapse#bs-example-navbar-collapse-1
         
