Add a periodic check to ensure the working copy is up-to-date with Dropbox.
Closes #4.

--- a/views/head.jade
+++ b/views/head.jade
@@ -63,4 +63,6 @@ body
             li.logged-out
               a(href="/login") Login
             
-  div(data-alerts="alerts", data-titles="{'warning': '<em>Warning!</em>'}", data-ids="myid", data-fade="3000")
+  #persAlerts
+  div(data-alerts="alerts", data-ids="flash", data-fade="5000")
+  
