--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,2 +1,13 @@
 #footer
   small Copyright 2014 Trestle Technology, LLC.
+
+script.
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-43159940-2']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
