--- a/views/index-main.jade
+++ b/views/index-main.jade
@@ -1,6 +1,12 @@
 
 .container-fluid
   .row-fluid
+    .col-sm-4.col-sm-offset-8
+      #search-bar
+
+
+.container-fluid
+  .row-fluid
     .col-sm-12
       #ace-editor
 .container-fluid
