Cache Todo lists in Mongo.

--- a/views/head.jade
+++ b/views/head.jade
@@ -36,6 +36,7 @@ head
   // Custom JS & CSS
   link(rel='stylesheet', href='/css/todotxtpp.css')
   script(src="/js/todotxtpp.js")
+  script(src="/js/merge.js")
 
   // Dropbox JS for file chooser.
   script#dropboxjs(type="text/javascript", src="https://www.dropbox.com/static/api/2/dropins.js", data-app-key="ds8bn744aonco6i")
