--- a/public/css/todotxtpp.css
+++ b/public/css/todotxtpp.css
@@ -139,3 +139,11 @@ button i {
    padding-right: 5px !important;
    margin: 0 !important;
 }
+
+#clear-search{
+  display: inline-block;
+  margin: 0 5px 0 3px;
+  cursor: pointer;
+  cursor: hand;
+  color: #AAA;
+}
